assets/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Raleway:wght@300;400;500&display=swap');
Sans-serif

header {
    margin: 0;
    padding: 0;
    height: 160px;
    
}

p {
    font-family: 'Raleway', sans-serif;
    font-weight: 500;
    text-align: center;
    padding-bottom: 20px;
}

h3 {
    text-align: center;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    padding: 20px;
}





/*-------Navigation-----*/

.navbar {
  float: right;
}

.navmenu {
    margin-top: -80px;
    padding: 0;
    font-family: 'Montserrate', sans-serif;
    font-weight: 20px;
    margin-bottom: 30px;
    margin-right: 20px;

}

.menu {
    padding: 0;
}




/*-------Logo-----*/
.logo {
    width: 100%;
    margin: 0;
    padding: 0;
    margin-bottom: -30px;

}

.logo h1 {
   color: #fafafa;
   text-align: left;
   height: 80px;
   background-color: #072446;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-right: 20px;
   display: block;
   font-family: 'Monstserrat', sans-serif ;
   font-weight: 600;
}

.logo a i {
    color: #e1aa12;
    margin-bottom: 20px;
    line-height: 45px;
    padding-top: 22px;
    font-size: 20px;
    padding: 20px;
}

.header-icon {
    padding-left: 20px;
}


.navbar-light .navbar-toggler {
    background-color: #e1aa12;
    border: none;
    margin-top: -110px;
    margin-right: 20px;
}

.navbar-light .navbar-nav .nav-link {
    color: #fafafa;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    letter-spacing: 0.3rem;
}


.menu li {
  float: right;
  margin-right: 30px;
  margin-top: 0px;
  padding: 0px;
  color: #fafafa;

}

.navbar-expand-lg .navbar-collapse{
    background-color: #072446;
    
}

/*-------heading-----*/

.uppercase {
    text-align: center;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    padding: 20px;
    text-transform: uppercase;
}

/*-----------about------*/

.about {
    background-color: #e1aa12;
    width: 100%;
    height: max-content;
}

.about p {
    font-family: 'Raleway', sans-serif;
    font-weight: 500;
    text-align: center;
    padding-bottom: 20px;
}

/*-----------services------*/

.services h3 {
    text-align: center;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    padding: 20px;
}

.s-container {
    background-color: rgba(0, 128, 137, 0.7);
    width: 100%;
    height: 520px;
    padding: 20px;
    margin: 15px;
    border: solid;
    border-color: #072446;
    border-radius: 5px;
}

.services {
    background-color: #fafafa;
}


/*-----------Coaches------*/

.coach-img {
    border-radius: 50%;
    padding: 20px;
    margin: 40px, 20px;
    border-color: #e1aa12;
    border: solid;
}

.weight-coach {
    height: 260px;
    width: 100%;
    border-radius: 50%;
}

.team {
    background-color: #013a67;
    width: 100%;
    height: 520px;
    padding: 20px;
    margin: 15px;
    border: solid;
    border-color: #e1aa12;
    border-radius: 10px;
    color: #e1aa12;
}

